--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,7 @@
             <div class="cta-buttons">
                 <button class="btn btn-primary" onclick="scrollToSection('contact')">Get in Touch</button>
                 <button class="btn btn-secondary" onclick="window.open('https://linkedin.com/in/theyashvishnoi', '_blank')">View LinkedIn</button>
+                <button class="btn btn-primary" onclick="window.open('https://1drv.ms/b/c/881ac72a825efbfb/IQC_j4yt_8KaTbrgukSL1OOjAavFKXekQTdGZPuQhh3l9NM?e=PXZlhy', '_blank')">See Resume</button>
             </div>
         </section>
 
